@startuml erd

hide circle
skinparam Linetype ortho

entity EmailUser {
    * id: int
    --
    * username: string
    * email: string
    * password_hash: string
    * is_active: boolean
    * is_staff: boolean
    * created_at: datetime
}

entity BlogPost {
    * id: int
    --
    * title: string
    * text: string
    image: string
    * created_at: datetime
    * user_id: int <<FK>>
}

entity Tag {
    * id: int
    --
    * name: string
}

entity BlogPostTag {
    * blog_id: int <<FK>>
    * tag_id: int <<FK>>
}

EmailUser ||--o{ BlogPost
BlogPost ||--right--o{ BlogPostTag
Tag ||--o{ BlogPostTag

@enduml